--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-fileupload": "^0.3.0",
     "jsonwebtoken": "^8.1.0",
-    "mongoose": "^4.13.6"
+    "mongoose": "^4.13.6",
+    "node-excel-to-json": "0.0.3"
   }
 }
